# equipment-booking

./: docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  db.sqlite3  docker-entrypoint.sh  pyproject.toml
backend/accounts/: admin.py  api.py  models.py  schemas.py
backend/accounts/migrations/: 0001_initial.py  0002_user_full_name_user_phone.py  0003_siteconfig.py
backend/config/: api.py  settings.py  urls.py
backend/content/: admin.py  api.py  models.py  schemas.py  seed_data.py
backend/content/management/commands/: seed_content.py
backend/content/migrations/: 0001_initial.py
backend/equipment/: admin.py  api.py  models.py  schemas.py
backend/equipment/migrations/: 0001_initial.py
backend/wellness/: admin.py  api.py  models.py  schemas.py
backend/wellness/migrations/: 0001_initial.py
frontend/: .env.example  CLAUDE.md  Dockerfile  index.html  package-lock.json  package.json  pseudo.txt
frontend/src/: App.jsx  api.js  auth.jsx  index.css  main.jsx  siteConfig.jsx  tailwind-colors.css  theme.js
frontend/src/components/: AdminShell.jsx  AppHeader.jsx
frontend/src/pages/Admin/: AdminBookings.jsx  AdminContent.jsx  AdminDashboard.jsx  AdminEquipment.jsx  AdminLogin.jsx  AdminUsers.jsx
frontend/src/pages/AdminSetup/: AdminSetup.jsx
frontend/src/pages/BookingHistory/: BookingHistory.jsx
frontend/src/pages/ChatRewards/: ChatRewards.jsx
frontend/src/pages/Equipment/: EquipmentBooking.jsx  equipmentIcons.jsx
frontend/src/pages/ForgotPassword/: ForgotPassword.jsx
frontend/src/pages/Guide/: Guide.jsx
(+10 files in other folders)
