[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "django-allauth>=65.18.0",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
]
